--- a/news-homepage-main/input.css
+++ b/news-homepage-main/input.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer{
+    .show-links{
+        @apply  bg-white flex  h-screen w-[70vw] fixed  flex-col right-0 top-0;
+    }
+    .hide-links{
+        @apply hidden;
+    }
+
+}
