--- a/news-homepage-main/output.css
+++ b/news-homepage-main/output.css
@@ -521,16 +521,28 @@ video {
   position: relative;
 }
 
-.top-0 {
-  top: 0px;
-}
-
 .right-5 {
   right: 1.25rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-5 {
   top: 1.25rem;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.z-\[-\] {
+  z-index: -;
+}
+
+.z-\[-1\] {
+  z-index: -1;
 }
 
 .order-3 {
@@ -700,6 +712,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-\[5vh\] {
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -817,26 +834,8 @@ video {
 }
 
 @media not all and (min-width: 640px) {
-  .max-sm\:right-5 {
-    right: 1.25rem;
-  }
-
-  .max-sm\:top-5 {
-    top: 1.25rem;
-  }
-
-  @media not all and (min-width: 640px) {
-    .max-sm\:max-sm\:top-5 {
-      top: 1.25rem;
-    }
-  }
-
   .max-sm\:z-10 {
     z-index: 10;
-  }
-
-  .max-sm\:w-screen {
-    width: 100vw;
   }
 
   .max-sm\:flex-col {
