--- a/news-homepage-main/output.css
+++ b/news-homepage-main/output.css
@@ -529,10 +529,6 @@ video {
   top: 0px;
 }
 
-.top-9 {
-  top: 2.25rem;
-}
-
 .z-\[-1\] {
   z-index: -1;
 }
@@ -625,10 +621,6 @@ video {
   cursor: pointer;
 }
 
-.resize {
-  resize: both;
-}
-
 .flex-col {
   flex-direction: column;
 }
@@ -647,6 +639,10 @@ video {
 
 .gap-5 {
   gap: 1.25rem;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .bg-black {
@@ -816,6 +812,12 @@ video {
 
   .hide-links {
     display: none;
+  }
+
+  .border {
+    border-width: 4px !important;
+    --tw-border-opacity: 1 !important;
+    border-color: rgb(252 165 165 / var(--tw-border-opacity)) !important;
   }
 }
 
