custom tailwind css

--- a/todo-app-main/src/index.css
+++ b/todo-app-main/src/index.css
@@ -1,3 +1,11 @@
+:root {
+    -BrightBlue: hsl(220, 98%, 61%);
+        -CheckBackground: linear-gradient hsl(192, 100%, 67%) to hsl(280, 87%, 65%);
+    
+
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
