--- a/todo-app-main/src/index.css
+++ b/todo-app-main/src/index.css
@@ -1,6 +1,3 @@
-
-
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -13,7 +10,7 @@
         @apply bg-white text-black  !important;
     }
     .night-card{
-     @apply bg-slate-800 !important;
+     @apply bg-slate-800 text-white !important;
     }
 
 }
