--- a/E-commerce/src/App.css
+++ b/E-commerce/src/App.css
@@ -609,6 +609,14 @@ video {
   height: 70vh;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[20rem\] {
+  height: 20rem;
+}
+
 .w-60 {
   width: 15rem;
 }
@@ -627,6 +635,14 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[20rem\] {
+  width: 20rem;
 }
 
 .items-center {
