--- a/E-commerce/src/App.css
+++ b/E-commerce/src/App.css
@@ -584,6 +584,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.m-3 {
+  margin: 0.75rem;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -613,6 +617,22 @@ video {
   height: 70vh;
 }
 
+.h-\[4rem\] {
+  height: 4rem;
+}
+
+.h-\[10rem\] {
+  height: 10rem;
+}
+
+.h-\[4em\] {
+  height: 4em;
+}
+
+.h-\[6em\] {
+  height: 6em;
+}
+
 .w-60 {
   width: 15rem;
 }
@@ -637,8 +657,32 @@ video {
   width: 100vw;
 }
 
+.w-\[4rem\] {
+  width: 4rem;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[8re\] {
+  width: 8re;
+}
+
+.w-\[15rem\] {
+  width: 15rem;
+}
+
+.w-\[6rem\] {
+  width: 6rem;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -659,6 +703,10 @@ video {
 
 .rounded-2xl {
   border-radius: 1rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .border-2 {
@@ -682,6 +730,11 @@ video {
 .bg-pink-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(236 72 153 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-no-repeat {
@@ -742,6 +795,12 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:border-pink-500:hover {
