--- a/E-commerce/src/App.css
+++ b/E-commerce/src/App.css
@@ -613,24 +613,20 @@ video {
   height: 20rem;
 }
 
+.h-\[6em\] {
+  height: 6em;
+}
+
 .h-\[70vh\] {
   height: 70vh;
 }
 
-.h-\[4rem\] {
-  height: 4rem;
+.min-h-\[10rem\] {
+  min-height: 10rem;
 }
 
-.h-\[10rem\] {
-  height: 10rem;
-}
-
-.h-\[4em\] {
-  height: 4em;
-}
-
-.h-\[6em\] {
-  height: 6em;
+.min-h-\[15rem\] {
+  min-height: 15rem;
 }
 
 .w-60 {
@@ -649,6 +645,14 @@ video {
   width: 40rem;
 }
 
+.w-\[4rem\] {
+  width: 4rem;
+}
+
+.w-\[6rem\] {
+  width: 6rem;
+}
+
 .w-\[8rem\] {
   width: 8rem;
 }
@@ -657,24 +661,16 @@ video {
   width: 100vw;
 }
 
-.w-\[4rem\] {
-  width: 4rem;
+.min-w-\[15rem\] {
+  min-width: 15rem;
 }
 
-.w-\[\] {
-  width: ;
+.min-w-\[20rem\] {
+  min-width: 20rem;
 }
 
-.w-\[8re\] {
-  width: 8re;
-}
-
-.w-\[15rem\] {
-  width: 15rem;
-}
-
-.w-\[6rem\] {
-  width: 6rem;
+.scroll-m-1 {
+  scroll-margin: 0.25rem;
 }
 
 .items-center {
@@ -699,6 +695,10 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll;
 }
 
 .rounded-2xl {
@@ -741,6 +741,10 @@ video {
   background-repeat: no-repeat;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
@@ -772,6 +776,11 @@ video {
 
 .text-\[3rem\] {
   font-size: 3rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
