--- a/E-commerce/src/input.css
+++ b/E-commerce/src/input.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .btnClass{
+       @apply text-white bg-pink-500 w-[4rem] h-9 rounded-2xl border-2 hover:text-pink-500 hover:bg-white hover:border-pink-500;
+    }
+}
